# wgpu-sandbox

./: .gitignore  Cargo.toml  README.md  index.html
src/: axis.rs  axis_shader.wgsl  lib.rs  main.rs  shape.rs  shape_shader.wgsl  state.rs  triangle_shader.wgsl
