[package]
name = "wgpu_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.18.0"
winit = "0.29.5"
